# wc3campaignfolderimporter

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
